# svg-language-server

./: .actup.toml  .dprint.json  .dprint.jsonc  .gitattributes  .gitignore  .markdownlint.json  .rumdl.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISCOVERIES.md  ISSUE-PLAN-compat-ux.md  ISSUE-PLAN-one-lifecycle-rule.md  ISSUE-lifecycle-lost-in-lint.md  PIPELINE.md  README.md  SHIT.md  biome.json  deno-deploy-builds.md  deno.json  deno.jsonc  dist-workspace.toml  go.work  justfile  package.json  pyproject.toml  runner.toml  rust-toolchain.toml  rustfmt.toml  tombi.toml  tree-sitter.json  tsconfig.json
crates/dprint-plugin-svg/: Cargo.toml  README.md
crates/dprint-plugin-svg/src/: lib.rs
crates/dprint-plugin-svg/tests/: plugin_settings.rs
crates/dprint-plugin-svg/tests/configs/: alphabetical-double-quotes.dprint.json  attrs-per-line-invalid.dprint.json  crlf-newline.dprint.json  defaults-global.dprint.json  global-crlf-only.dprint.json  multiline-align.dprint.json  range-request.dprint.json  spaces-no-self-close.dprint.json
crates/svg-color/: AGENTS.md  Cargo.toml  README.md
crates/svg-color/src/: extract.rs  lib.rs  named_colors.rs  parse.rs  present.rs  types.rs
crates/svg-color/src/extract/: property.rs  resolve.rs
crates/svg-color/src/parse/: hex.rs  lab_lch.rs  mix.rs  oklab_oklch.rs  rgb_hsl.rs  space.rs
crates/svg-data/: AGENTS.md  Cargo.toml  README.md  SOURCES.md  TODO.md  build.rs
crates/svg-data/data/: attributes.json  catalog.compat.json  catalog.compat.schema.json  catalog.core.json  catalog.core.schema.json  catalog.graph.json  catalog.graph.schema.json  catalog.json  catalog.schema.json  catalog.snapshot.schema.json  catalog.tree-sitter.json  catalog.tree-sitter.schema.json  elements.json  placeholder_attribute_names.txt
crates/svg-data/data/profiles/: svg-native.json
crates/svg-data/data/reviewed/: bcd_deprecation_audit_2026-04.md  bcd_spec_exceptions.toml  spec_removals.json
crates/svg-data/data/schemas/: attributes.schema.json  catalog.json  categories.schema.json  element_attribute_matrix.schema.json  elements.schema.json  exceptions.schema.json  grammars.schema.json  overlay.schema.json  review.schema.json  snapshot.schema.json  source-manifest.schema.json  svg-native-profile.schema.json  union-attributes.schema.json  union-elements.schema.json
crates/svg-data/data/snapshots/: svg11-rec-20030114.json  svg11-rec-20110816.json  (+2 more)
crates/svg-data/derivation/: content_model.rs
crates/svg-data/examples/: derive_content_models.rs  generate_derived_membership.rs  generate_schemas.rs  generate_snapshot_review.rs  generate_snapshot_seed.rs  generate_svg_native_profile.rs
crates/svg-data/src/: bcd.rs  catalog.rs  categories.rs  compat_parse.rs  derived.rs  edition.rs  extraction.rs  inventory.rs  lib.rs  profile.rs  review.rs  snapshot_schema.rs  types.rs  worker_schema.rs  xlink.rs
crates/svg-data/tests/: content_model_spec_derived.rs  cr_inventory.rs  derived_membership.rs  descriptions_audit.rs  ed_presence_matrix.rs  edition_index.rs  edition_inventories.rs  propidx_enums_repro.rs  provenance_bytes.rs  runtime_codegen.rs  snapshot_reviews.rs  source_manifests.rs  spec_inventory.rs  spec_required_edges.rs  spec_scan_repro.rs  svg11_first_snapshot.rs  svg11_inventory.rs  svg_native_profile.rs
crates/svg-format/: AGENTS.md  Cargo.toml  README.md
crates/svg-format/src/: lib.rs  main.rs  tag_parse.rs  text_content.rs
crates/svg-format/tests/: format_tests.rs
crates/svg-language-server/: AGENTS.md  Cargo.toml  README.md
crates/svg-language-server/src/: clipboard.rs  code_actions.rs  compat.rs  completion.rs  definition.rs  diagnostics.rs  freshness.rs  hover.rs  lib.rs  logging.rs  main.rs  positions.rs  stylesheets.rs
crates/svg-language-server/tests/: AGENTS.md  colors_and_formatting.rs  completions.rs  definitions_and_hover.rs  diagnostics_and_actions.rs  integration.rs
crates/svg-lint/: AGENTS.md  Cargo.toml  README.md
crates/svg-lint/src/: lib.rs  namespaces.rs  rules.rs  types.rs  version.rs
crates/svg-lint/tests/: cli_tests.rs
crates/svg-references/: AGENTS.md  Cargo.toml  README.md
crates/svg-references/src/: lib.rs
crates/svg-tree/: AGENTS.md  Cargo.toml  README.md
crates/svg-tree/src/: lib.rs
docs/: AGENTS.md  (+1 more)
grammars/tree-sitter-svg/: .dprint.jsonc  .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  DISCOVERIES.md  Makefile  README.md  SPEC_AUDIT.md  binding.gyp  biome.json  build.zig  build.zig.zon  go.mod  grammar.fixtures.ts  grammar.js  grammar.json  grammar.test.ts  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json  tsconfig.json
grammars/tree-sitter-svg-paint/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  biome.json  build.zig  build.zig.zon  constants.js  go.mod  grammar.js  grammar.test.ts  package.json  pom.xml  pyproject.toml  setup.py
grammars/tree-sitter-svg-paint/queries/: locals.scm
grammars/tree-sitter-svg-paint/scripts/: ensure-native.ts
grammars/tree-sitter-svg-paint/src/: grammar.json  node-types.json  parser.c
grammars/tree-sitter-svg-path/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  biome.json  build.zig  build.zig.zon  constants.js  go.mod  grammar.js  grammar.test.ts  package.json  pom.xml  pyproject.toml  setup.py  tsconfig.json
grammars/tree-sitter-svg-path/queries/: highlights.scm
grammars/tree-sitter-svg-path/scripts/: ensure-native.ts
grammars/tree-sitter-svg-path/src/: grammar.json  node-types.json  parser.c  scanner.c
grammars/tree-sitter-svg/.cargo/: config.toml
grammars/tree-sitter-svg/.githooks/: pre-commit
grammars/tree-sitter-svg/.zed/: settings.json
grammars/tree-sitter-svg/queries/: highlights.scm  injections.scm  locals.scm  outline.scm  tags.scm  textobjects.scm
grammars/tree-sitter-svg/scripts/: codegen.ts  ensure-clangd-headers.ts  ensure-native.ts  gen-corpus.ts  parse-examples.sh
grammars/tree-sitter-svg/src/: grammar.json  node-types.json  parser.c  scanner.c
grammars/tree-sitter-svg/test/: grammar_matchers.ts
(+299 files in other folders)
