#:tombi lint.disabled = true

[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
version    = "0.1.0"
authors    = ["Kaj Kowalski <info@kajkowalski.nl>"]
edition    = "2024"
homepage   = "https://github.com/kjanat/svg-language-server#readme"
repository = "https://github.com/kjanat/svg-language-server"
license    = "MIT"
keywords   = ["svg"]
categories = ["development-tools"]

[workspace.dependencies]
base64           = "0.22"
clap             = "4.5"
serde_json       = "1"
tower-lsp-server = "0.23"
tracing          = "0.1"
tracing-appender = "0.2"
tree-sitter      = "0.26"
tree-sitter-css  = "0.25"
ureq             = "3"
url              = "2"

[workspace.dependencies.serde]
version  = "1"
features = ["derive"]

[workspace.dependencies.svg-color]
path = "crates/svg-color"

[workspace.dependencies.svg-data]
path = "crates/svg-data"

[workspace.dependencies.svg-format]
path = "crates/svg-format"

[workspace.dependencies.svg-lint]
path = "crates/svg-lint"

[workspace.dependencies.svg-references]
path = "crates/svg-references"

[workspace.dependencies.tokio]
version  = "1"
features = ["io-std", "macros", "rt-multi-thread"]

[workspace.dependencies.tracing-subscriber]
version  = "0.3"
features = ["fmt"]

[workspace.dependencies.tree-sitter-svg]
package = "tree-sitter-svg"
git     = "https://github.com/kjanat/tree-sitter-svg"
rev     = "8ef7d70591529b85624439337e1e9b3c38b47b14"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"

# [workspace.dependencies.tree-sitter-svg]
# package = "tree-sitter-svg"
# path    = "../tree-sitter-svg"
