[workspace]
resolver = "3"
members  = ["crates/*", "editors/zed-svg", "grammars/tree-sitter-*"]

[workspace.package]
version      = "0.1.0"
authors      = ["Kaj Kowalski <info@kajkowalski.nl>"]  # tombi: lint.rules = { deprecated.disabled = true, unused-noqa.disabled = true }
edition      = "2024"
rust-version = "1.96"
homepage     = "https://github.com/kjanat/svg#readme"
repository   = "https://github.com/kjanat/svg"
license      = "MIT"
keywords     = ["svg"]
categories   = ["development-tools"]

[workspace.dependencies]
base64               = "0.22"
cc                   = "1.2"
clap                 = "4.6"
quick-xml            = "0.40"
regex                = "1"
schemars             = "1"
serde_json           = "1"
sha1                 = "0.11"
sha2                 = "0.11"
tempfile             = "3"
tl                   = "0.7"
toml                 = "1"
tower-lsp-server     = "0.23"
tracing              = "0.1"
tracing-appender     = "0.2"
tree-sitter          = "0.26.9"
tree-sitter-css      = "0.25"
tree-sitter-language = "0.1"
ureq                 = "3"
url                  = "2"
winnow               = "1"

json-schema-sort   = { version = "0.1", default-features = false }
serde              = { version = "1", features = ["derive"] }
tokio              = { version = "1", features = ["fs", "io-std", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

svg-color      = { package = "svg-color", path = "crates/svg-color" }
svg-data       = { package = "svg-data", path = "crates/svg-data" }
svg-format     = { package = "svg-format", path = "crates/svg-format" }
svg-lint       = { package = "svg-lint", path = "crates/svg-lint" }
svg-references = { package = "svg-references", path = "crates/svg-references" }
svg-tree       = { package = "svg-tree", path = "crates/svg-tree" }

tree-sitter-svg           = { package = "tree-sitter-svg", path = "grammars/tree-sitter-svg" }
tree-sitter-svg-paint     = { package = "tree-sitter-svg-paint", path = "grammars/tree-sitter-svg-paint" }
tree-sitter-svg-path      = { package = "tree-sitter-svg-path", path = "grammars/tree-sitter-svg-path" }
tree-sitter-svg-transform = { package = "tree-sitter-svg-transform", path = "grammars/tree-sitter-svg-transform" }

[workspace.lints.clippy]
expect_used                        = "deny"
identity_op                        = "deny"
manual_clamp                       = "deny"
manual_filter                      = "deny"
manual_find                        = "deny"
manual_flatten                     = "deny"
manual_map                         = "deny"
manual_memcpy                      = "deny"
manual_non_exhaustive              = "deny"
manual_ok_or                       = "deny"
manual_range_contains              = "deny"
manual_retain                      = "deny"
manual_strip                       = "deny"
manual_try_fold                    = "deny"
manual_unwrap_or                   = "deny"
module_name_repetitions            = "warn"
must_use_candidate                 = "deny"
needless_borrow                    = "deny"
needless_borrowed_reference        = "deny"
needless_collect                   = "deny"
needless_late_init                 = "deny"
needless_option_as_deref           = "deny"
needless_question_mark             = "deny"
needless_update                    = "deny"
redundant_clone                    = "deny"
redundant_closure                  = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes         = "deny"
trivially_copy_pass_by_ref         = "deny"
uninlined_format_args              = "deny"
unnecessary_filter_map             = "deny"
unnecessary_lazy_evaluations       = "deny"
unnecessary_sort_by                = "deny"
unnecessary_to_owned               = "deny"
unwrap_used                        = "deny"

[workspace.lints.clippy.all]
level    = "warn"
priority = -1

[workspace.lints.clippy.nursery]
level    = "warn"
priority = -1

[workspace.lints.clippy.pedantic]
level    = "warn"
priority = -1

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code  = "forbid"

[workspace.lints.rustdoc]
bare_urls                    = "deny"
broken_intra_doc_links       = "deny"
invalid_codeblock_attributes = "warn"
invalid_html_tags            = "deny"
invalid_rust_codeblocks      = "deny"
missing_crate_level_docs     = "forbid"
private_doc_tests            = "warn"
private_intra_doc_links      = "warn"
redundant_explicit_links     = "deny"
unescaped_backticks          = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"
