[package]
name                 = "dprint-plugin-svg"
version              = "0.1.0"
edition.workspace    = true
description          = "dprint Wasm plugin for SVG formatting"
readme               = "README.md"
repository.workspace = true
keywords             = ["dprint", "formatter", "svg", "wasm"]
categories           = ["development-tools", "text-editors"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow.workspace     = true
dprint-core          = { workspace = true, features = ["wasm"] }
serde.workspace      = true
serde_json.workspace = true
svg-format.workspace = true
