[package]
name                 = "svg-color"
version.workspace    = true
edition.workspace    = true
description          = "Color extraction and format conversion for SVG documents"
readme               = "README.md"
repository.workspace = true
keywords             = ["color", "hex", "hsl", "rgb", "svg"]
categories           = ["graphics", "parsing"]

[dependencies]
tree-sitter.workspace     = true
tree-sitter-css.workspace = true
tree-sitter-svg.workspace = true
