[package]
name                 = "svg-data"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
description          = "Compile-time SVG spec catalog from MDN browser-compat-data"
documentation        = "https://svg-compat.kjanat.com/"
readme               = "README.md"
homepage             = "https://github.com/kjanat/svg-language-server/tree/master/crates/svg-data"
repository.workspace = true
license.workspace    = true
keywords             = ["browser-compat-data", "codegen", "mdn", "spec", "svg"]
categories           = ["development-tools::build-utils", "web-programming"]
build                = "build.rs"

[dependencies]
schemars.workspace   = true
serde.workspace      = true
serde_json.workspace = true
sha2.workspace       = true
toml.workspace       = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
schemars.workspace   = true
serde.workspace      = true
serde_json.workspace = true
toml.workspace       = true
ureq.workspace       = true

[lints]
workspace = true
