[package]
name                 = "svg-format"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
description          = "Structural formatter for SVG documents"
homepage             = "https://github.com/kjanat/svg-language-server/tree/master/crates/svg-format"
repository.workspace = true
license.workspace    = true
keywords             = ["format", "pretty-print", "svg", "tree-sitter"]
categories           = ["development-tools", "text-editors"]

[lib]
name = "svg_format"
path = "src/lib.rs"

[[bin]]
name = "svg-format"
path = "src/main.rs"

[dependencies]
clap                      = { workspace = true, features = ["derive"] }
tree-sitter.workspace     = true
tree-sitter-svg.workspace = true
