[package]
name                 = "svg-format"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
description          = "Structural formatter for SVG documents"
homepage             = "https://github.com/kjanat/svg/tree/HEAD/crates/svg-format"
repository.workspace = true
license.workspace    = true
keywords             = ["format", "pretty-print", "svg", "tree-sitter"]
categories           = ["development-tools", "text-editors"]

[lib]
name = "svg_format"
path = "src/lib.rs"

[[bin]]
name              = "svg-format"
path              = "src/main.rs"
required-features = ["cli"]

[dependencies]
tree-sitter.workspace          = true
tree-sitter-svg.workspace      = true
tree-sitter-svg-path.workspace = true

[dependencies.clap]
workspace = true
features  = ["derive"]
optional  = true

[features]
default = ["cli"]
cli     = ["clap"]

[lints]
workspace = true
