[package]
name                  = "svg-language-server"
version               = "0.1.0"
edition.workspace     = true
description.workspace = true
readme.workspace      = true
repository.workspace  = true

[[bin]]
name = "svg-language-server"
path = "src/main.rs"

[dependencies]
base64.workspace             = true
svg-color.workspace          = true
svg-data.workspace           = true
svg-lint.workspace           = true
tokio.workspace              = true
tower-lsp-server.workspace   = true
tracing.workspace            = true
tracing-appender.workspace   = true
tracing-subscriber.workspace = true
tree-sitter.workspace        = true
tree-sitter-svg.workspace    = true

[dev-dependencies]
serde_json.workspace = true
