[package]
name                 = "svg-language-server"
version              = "0.1.0"
edition.workspace    = true
description          = "LSP server for SVG — hover docs, completions, diagnostics, and color swatches"
readme               = "README.md"
repository.workspace = true
keywords             = ["completions", "diagnostics", "language-server", "lsp", "svg"]
categories           = ["development-tools", "text-editors"]

[[bin]]
name = "svg-language-server"
path = "src/main.rs"

[dependencies]
arboard.workspace            = true
base64.workspace             = true
serde_json.workspace         = true
svg-color.workspace          = true
svg-data.workspace           = true
svg-format.workspace         = true
svg-lint.workspace           = true
svg-references.workspace     = true
tokio.workspace              = true
tower-lsp-server.workspace   = true
tracing.workspace            = true
tracing-appender.workspace   = true
tracing-subscriber.workspace = true
tree-sitter.workspace        = true
tree-sitter-svg.workspace    = true
ureq.workspace               = true
url.workspace                = true
