[package]
name                 = "svg-language-server"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
description          = "LSP server for SVG"
readme               = "README.md"
homepage             = "https://github.com/kjanat/svg-language-server/tree/master/crates/svg-language-server"
repository.workspace = true
license.workspace    = true
keywords             = ["completions", "diagnostics", "language-server", "lsp", "svg"]
categories           = ["development-tools", "text-editors"]

[lib]
name = "svg_language_server"
path = "src/lib.rs"

[[bin]]
name = "svg-language-server"
path = "src/main.rs"

[dependencies]
base64.workspace             = true
serde_json.workspace         = true
svg-color.workspace          = true
svg-data.workspace           = true
svg-format.workspace         = true
svg-lint.workspace           = true
svg-references.workspace     = true
tokio.workspace              = true
tower-lsp-server.workspace   = true
tracing.workspace            = true
tracing-appender.workspace   = true
tracing-subscriber.workspace = true
tree-sitter.workspace        = true
tree-sitter-svg.workspace    = true
ureq.workspace               = true
url.workspace                = true

[lints]
workspace = true
