[package]
name                 = "svg-lint"
version.workspace    = true
edition.workspace    = true
description          = "Structural linting for SVG"
readme               = "README.md"
repository.workspace = true
keywords             = ["diagnostics", "lint", "svg", "validation"]
categories           = ["development-tools"]

[dependencies]
svg-data.workspace        = true
tree-sitter.workspace     = true
tree-sitter-svg.workspace = true
