[package]
name                 = "svg-lint"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
description          = "Structural linting for SVG"
readme               = "README.md"
homepage             = "https://github.com/kjanat/svg-language-server/tree/master/crates/svg-lint"
repository.workspace = true
license.workspace    = true
keywords             = ["diagnostics", "lint", "svg", "validation"]
categories           = ["development-tools"]

[dependencies]
svg-data.workspace        = true
tree-sitter.workspace     = true
tree-sitter-svg.workspace = true
