[package]
name                 = "svg-references"
version.workspace    = true
edition.workspace    = true
description          = "Shared SVG/CSS symbol extraction for references and definitions"
repository.workspace = true
keywords             = ["css", "references", "svg", "tree-sitter"]
categories           = ["development-tools"]

[dependencies]
tree-sitter.workspace     = true
tree-sitter-css.workspace = true
tree-sitter-svg.workspace = true
