[project]
name            = "tree-sitter-svg"
version         = "0.1.0"
description     = "SVG grammar for Tree-sitter"
readme          = "README.md"
requires-python = ">=3.10"
license         = "MIT OR Apache-2.0"
authors         = [{ name = "Kaj Kowalski", email = "info@kajkowalski.nl" }]
keywords        = ["incremental", "parsing", "svg", "tree-sitter"]
classifiers     = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]

[project.urls]
# Funding  = "https://github.com/kjanat/funding"
Homepage = "https://github.com/kjanat/svg/tree/master/grammars/tree-sitter-svg"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[build-system]
requires      = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build          = "cp310-*"
build-frontend = "build"
