[project]
name            = "tree-sitter-svg"
version         = "0.1.0"
description     = "SVG grammar for Tree-sitter"
readme          = "README.md"
requires-python = ">=3.13"
license         = "MIT OR Apache-2.0"
authors         = [{ name = "Kaj Kowalski", email = "info@kajkowalski.nl" }]
keywords        = ["incremental", "parsing", "svg", "tree-sitter"]
classifiers     = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/kjanat/svg/tree/HEAD/grammars/tree-sitter-svg"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[dependency-groups]
dev   = [
  { include-group = "build" },
  { include-group = "lint" },
  { include-group = "ts" },
]
build = ["setuptools>=77.0.0", "typing_extensions>=4.12", "wheel"]
lint  = ["basedpyright", "ruff", "ty"]
ts    = ["tree-sitter~=0.25"]

[build-system]
requires      = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool]
cibuildwheel          = { build = "cp313-*", build-frontend = "build[uv]" }
pyright               = { include = ["bindings/python", "setup.py"], extends = "../../pyproject.toml" }
ruff.extend           = "../../pyproject.toml"
ty.environment.python = "../../.venv"
